--- a/index.html
+++ b/index.html
@@ -1048,7 +1048,7 @@
                     const eTanks = stop.poNumber ? Object.keys(findDipsForPO(stop.poNumber)?.latestData || {}) : [];
                     stop.compartments.forEach((c,i) => { 
                         if (c.enabled && c.volume > 0) {
-                            const ti = c.assignedTank ? eTanks.indexOf(c.assignedTank) + 1 : 0;
+                            const ti = (c.assignedTank && c.assignedTank !== '') ? eTanks.indexOf(c.assignedTank) + 1 : 0;
                             email += `${i+1} - ${c.volume.toLocaleString()} ${c.product}${ti > 0 ? ' → Tank ' + ti : ''}\n`;
                         }
                     });
