--- a/index.html
+++ b/index.html
@@ -851,7 +851,13 @@
             const [trailerNumber, setTrailerNumber] = useState('');
             const [deliveryDate, setDeliveryDate] = useState(() => { const t = new Date(); t.setDate(t.getDate()+1); return t.toISOString().split('T')[0]; });
             const [stops, setStops] = useState([createEmptyStop()]);
-            const [liveDips, setLiveDips] = useState(null);
+            const [liveDips, setLiveDips] = useState(() => {
+                try {
+                    const cached = localStorage.getItem('schooner_dips_cache');
+                    if (cached) { const p = JSON.parse(cached); if (p && p.length > 0) { DIPS_DATA = p; return p; } }
+                } catch(e) {}
+                return null;
+            });
             const [dipsLoading, setDipsLoading] = useState(false);
             const [refreshStatus, setRefreshStatus] = useState(null);
             const [dipsTabName, setDipsTabName] = useState(() => {
@@ -876,6 +882,7 @@
                     setLiveDips(result);
                     DIPS_DATA = result;
                     setRefreshStatus({ok: true, msg: `✅ ${result.length} stations loaded from "${dipsTabName}"`});
+                    try { localStorage.setItem('schooner_dips_cache', JSON.stringify(result)); localStorage.setItem('schooner_dips_time', new Date().toISOString()); } catch(e) {}
                 } else {
                     const errDetail = result?.error || 'No data returned';
                     console.error('Refresh failed:', errDetail);
@@ -1045,11 +1052,21 @@
                     email += `PO #: ${stop.poNumber}\n${Object.keys(td.products).map(p=>`${p}: ${td.products[p]}`).join('    ')}\n`;
                     if (stop.pbNumber) email += `PB${stop.pbNumber}\n`;
                     if (stop.lvNumber) email += `LV${stop.lvNumber}\n`;
-                    const eTanks = stop.poNumber ? Object.keys(findDipsForPO(stop.poNumber)?.latestData || {}) : [];
                     stop.compartments.forEach((c,i) => { 
                         if (c.enabled && c.volume > 0) {
-                            const ti = c.assignedTank ? eTanks.indexOf(c.assignedTank) + 1 : 0;
-                            email += `${i+1} - ${c.volume.toLocaleString()} ${c.product}${ti > 0 ? ' → Tank ' + ti : ''}\n`;
+                            let tankLabel = '';
+                            if (c.assignedTank && stop.poNumber) {
+                                const eDip = findDipsForPO(stop.poNumber);
+                                if (eDip) {
+                                    const eType = getProductType(c.product);
+                                    const eMatching = Object.keys(eDip.latestData).filter(k => matchProductToTank(eType, k));
+                                    if (eMatching.length > 1) {
+                                        const tankNum = eMatching.indexOf(c.assignedTank) + 1;
+                                        tankLabel = ' → Tank ' + tankNum;
+                                    }
+                                }
+                            }
+                            email += `${i+1} - ${c.volume.toLocaleString()} ${c.product}${tankLabel}\n`;
                         }
                     });
                     if (stop.notes) email += `${stop.notes}\n`;
@@ -1078,7 +1095,10 @@
                     <div className="card"><div className="card-header">
                         <div className="card-icon">⛽</div><h2 className="card-title">Live Fuel Inventory (Dips)</h2>
                         <div style={{display:'flex',gap:'0.375rem',alignItems:'center',flexWrap:'wrap'}}>
-                            <span style={{fontSize:'0.625rem',color:'var(--text-tertiary)',fontWeight:500}}>Live from Google Sheet</span>
+                            <span style={{fontSize:'0.5625rem',color:'var(--text-tertiary)',fontWeight:500}}>{(() => {
+                            try { const t = localStorage.getItem('schooner_dips_time'); if (t) { const d = new Date(t); return 'Last refresh: ' + d.toLocaleDateString() + ' ' + d.toLocaleTimeString([], {hour:'2-digit',minute:'2-digit'}); } } catch(e) {}
+                            return 'Live from Google Sheet';
+                        })()}</span>
                             <button className={`refresh-btn ${dipsLoading ? 'loading' : ''}`} onClick={refreshDips}>{dipsLoading ? '⏳ Loading...' : '🔄 Refresh Live'}</button>
                             {refreshStatus && <div style={{fontSize:'0.5625rem',fontWeight:600,color:refreshStatus.ok?'#16A34A':'#DC2626',maxWidth:500}}>
                                 {refreshStatus.msg}
@@ -1184,12 +1204,12 @@
                                                                 if (tanks.length === 0) return null;
                                                                 const pcol = getProductColor(comp.product);
                                                                 if (tanks.length === 1) {
-                                                                    return <div style={{marginTop:'0.1rem',fontSize:'0.5rem',color:pcol.text,fontWeight:600}}>{'→ '+tanks[0]}</div>;
+                                                                    return null;
                                                                 }
                                                                 return <div style={{marginTop:'0.2rem'}}>
                                                                     <select style={{width:'100%',padding:'0.2rem 0.25rem',border:'1px solid '+(comp.assignedTank?pcol.border:'#CBD5E1'),borderRadius:'4px',fontSize:'0.5625rem',fontFamily:'inherit',background:comp.assignedTank?pcol.bg:'white',fontWeight:comp.assignedTank?700:400,color:comp.assignedTank?pcol.text:'#64748B'}} value={comp.assignedTank} onChange={e => updateCompartmentTank(stop.id, ci, e.target.value)}>
                                                                         <option value="">{'🎯 Assign tank...'}</option>
-                                                                        {tanks.map((t,ti) => <option key={t} value={t}>{'Tank '+(ti+1)+' ('+t+')'}</option>)}
+                                                                        {tanks.map((t,ti) => <option key={t} value={t}>{t}</option>)}
                                                                     </select>
                                                                 </div>;
                                                             })()}
